updating dataset preprocessing

--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -159,9 +159,8 @@
     "    \n",
     "    return df\n",
     "\n",
-    "def tokenize_and_split_dataset(model_name: str):\n",
+    "def tokenize_dataset(model_name: str):\n",
     "    t = transformers.AutoTokenizer.from_pretrained(model_name, use_fast=True)\n",
-    "\n",
     "    t.pad_token = t.eos_token\n",
     "    data_collator = transformers.DataCollatorForLanguageModeling(t, mlm=False)\n",
     "\n",
@@ -182,7 +181,7 @@
    "source": [
     "df = load_dataset()\n",
     "df = prepare_dataset(df)\n",
-    "data_collator, t = tokenize_and_split_dataset(model_name)\n",
+    "data_collator, t = tokenize_dataset(model_name)\n",
     "data = train_test_split(df)"
    ]
   },
